# End-to-End-Retail-Data-Pipeline-on-Databricks

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data_samples/processed/GLobalRetail_Bronze/: Bronze_customers.csv  Bronze_products.csv  Bronze_transactions.csv
data_samples/processed/GlobalRetail_Gold/: Gold_category_sales.csv  Gold_daily_sales.csv
data_samples/processed/GlobalRetail_Silver/: Silver_customer.csv  Silver_orders.csv  Silver_products.csv
docs/: architecture.md  challenges_and_fixes.md  dashboard_notes.md  project_overview.md
src/bronze/: customer_loader.py  product_loader.py  transaction_loader.py
src/global_retail/: config.py  constants.py  utils.py
src/gold/: category_sales.py  daily_sales.py
src/silver/: customer_transform.py  order_transform.py  product_transform.py
tests/: test_transformation.py
